<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".ui.fragments.MapsFragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nearMeFloatingActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="660dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:padding="1dp"
        android:scaleType="fitXY"
        app:backgroundTint="@color/green_500"
        app:fabCustomSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/human_circle"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/searchFloatingActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="660dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:padding="1dp"
        android:scaleType="fitXY"
        app:backgroundTint="@color/green_500"
        app:fabCustomSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/icon_search"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/foodFloatingActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="660dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:padding="1dp"
        android:scaleType="center"
        app:backgroundTint="@color/white"
        app:fabCustomSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="38dp"
        app:srcCompat="@drawable/icon_watermelon"
        app:tint="@color/green_700"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/loginFloatingActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:padding="1dp"
        android:scaleType="center"
        app:backgroundTint="@color/green_700"
        app:fabCustomSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="38dp"
        app:srcCompat="@drawable/icon_login"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />

    <SeekBar
        android:id="@+id/nearMeSeekBar"
        style="@android:style/Widget.DeviceDefault.SeekBar"
        android:layout_width="239dp"
        android:layout_height="40dp"
        android:layout_marginBottom="670dp"
        android:max="70"
        android:maxHeight="150dp"
        android:minHeight="150dp"
        android:progress="1"
        android:progressTint="@color/green_500"
        android:scrollbarSize="20dp"
        android:thumbOffset="2dp"
        android:thumbTint="@color/green_700"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/foodFloatingActionButton"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/nearMeFloatingActionButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/searchCardView"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:layout_marginBottom="670dp"
        android:visibility="invisible"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <fragment
            android:id="@+id/autocompleteFragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="-16dp" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/progressSeekBarTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/green_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/SelectedProductsTextView"
        android:layout_width="382dp"
        android:layout_height="62dp"
        android:layout_marginBottom="548dp"
        android:clickable="false"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        tools:ignore="TextViewEdits" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRecyclerView"
        android:layout_width="378dp"
        android:layout_height="488dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/loginFloatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />


</androidx.constraintlayout.widget.ConstraintLayout>
    <!--android:adjustViewBounds="true"-->