...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productUserImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@{product.icon}"
...
